[build-system]
requires = ["setuptools >= 72.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["DynamicBatch*"]
exclude = ["examples*"]

[project]
name = "DynamicBatch"
version = "0.1.1"
description = ""
readme = "README.md"
requires-python = ">= 3.9"
license = { text = "Apache 2.0" }
authors = [
    {name = "Carlos Golvano"},
]
dependencies = [
    "torch >= 2.4.0",
    "datasets >= 3.0.1",
    "transformers >= 4.46.1"
]

[project.urls]
homepage = "https://github.com/CarlosGolvano/DynamicBatch"
